# r53ddns

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  test.yml
src/: action.rs  domain.rs  main.rs  r53ddns.rs
src/action/: get_ip.rs  update.rs  wait.rs
src/base/: error.rs
src/domain/: aws_credential.rs  change_id.rs  change_status.rs  ip_address.rs  record_name.rs  record_type.rs  route53.rs  ttl.rs  wait_interval.rs  zone_id.rs
