[package]
name = "r53ddns"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "a command-line utility to update route53 entry"
homepage = "https://github.com/coord-e/r53ddns"
repository = "https://github.com/coord-e/r53ddns"
keywords = ["cli", "aws", "route53", "ddns"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
reqwest = "0.10.4"
rusoto_core = "0.43.0-beta.1"
rusoto_credential = "0.43.0-beta.1"
rusoto_route53 = "0.43.0-beta.1"
